implemented armor qualities

--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -142,7 +142,7 @@
 
 
             </div>
-            {{#each data.secChar.wornGear.weapons}}
+            {{#each wornGear.weapons}}
 
             {{#if (contains this.type "ranged")}}
 
