--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -29,31 +29,37 @@
                 <div class="resource flex-group-center">
                     <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" name="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
+                       
                         <span> / </span>
-                        <input type="text" name="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
+                       
                     </div>
                 </div>
                 <div class="resource flex-group-center">
                     <label for="data.secChar.fatigue.value" class="resource-label">Fatigue</label>
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" name="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
+                       
                         <span> / </span>
-                        <input type="text" name="data.secChar.fatigue.max" value="{{data.secChar.fatigue.max}}" data-dtype="Number" disabled/>
+                        <input type="text" class="combat-resources" data-target="data.secChar.fatigue.max" value="{{data.secChar.fatigue.max}}" data-dtype="Number" disabled/>
+                       
                     </div>
                 </div>
                 <div class="resource flex-group-center">
                     <label class="resource-label">Global Modifier</label>
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" name="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
+                        
                     </div>
                 </div>
                 <div class="resource flex-group-center">
                     <label class="resource-label">Fate</label>
                     <div class="resource-content flexrow flex-center flex-between">
-                        <input type="text" name="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
+                        
                         <span> / </span>
-                        <input type="text" name="data.secChar.fate.max" value="{{data.secChar.fate.max}}" data-dtype="Number"/>
+                        <input type="text" class="combat-resources" data-target="data.secChar.fate.max" value="{{data.secChar.fate.max}}" data-dtype="Number"/>
                     </div>
                 </div>
                 <div class="resource flex-group-center">
@@ -110,7 +116,8 @@
                 {{#each data.characteristics as |char key|}}
                 {{#unless (compareString key "inf")}}
                 <div>
-                    <input type="text" name="data.characteristics.{{key}}.value" value="{{char.value}}" data-dtype="Number"/>
+                    <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.value" value="{{data.characteristics.{{key}}.value}}" data-dtype="Number"/>
+                   
 
                 </div>
                 {{/unless}}
@@ -122,8 +129,8 @@
                 {{#each data.characteristics as |char key|}}
                 {{#unless (compareString key "inf")}}
                 <div>
-
-                    <input class="ub" type="text" name="data.characteristics.{{key}}.uB" value="{{char.uB}}" data-dtype="Number"/>
+                    <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.uB" value="{{data.characteristics.{{key}}.uB}}" data-dtype="Number"/>
+                    
                 </div>
                 {{/unless}}
                 {{/each}}
@@ -512,11 +519,12 @@ Stays commented until the parse script works
                 <div class="psy-header flexrow">
                     <div class="flexcol">
                         <label>Psy Rating:</label>
-                        <input type="text" name="data.psykana.pr.value" value="{{data.psykana.pr.value}}" data-dtype="Number">
+                        <input type="text" class="combat-resources" data-target="data.psykana.pr.value" value="{{data.psykana.pr.value}}" data-dtype="Number"/>
+                       
                     </div>
                     <div class="flexcol">
                         <label>Sustained Powers:</label>
-                        <input type="text" name="data.psykana.pr.sustain" value="{{data.psykana.pr.sustain}}" data-dtype="Number">
+                        <input type="text" class="combat-resources" data-target="data.psykana.pr.sustain" value="{{data.psykana.pr.sustain}}" data-dtype="Number"/>
                     </div>
                     <div class="flexcol">
                         <label>Effective PR:</label>
@@ -524,6 +532,7 @@ Stays commented until the parse script works
                     </div>
                     <div class="flexcol">
                         <label>Class:</label>
+                        
                         <select class="psyType-select" name="data.psykana.psykerType.value" data-dtype="String">
                             {{#select data.psykana.psykerType.value}}
                             <option value="bound">Bound</option>
@@ -535,7 +544,8 @@ Stays commented until the parse script works
                     </div>
                     <div class="flexcol">
                         <label>Psy Modifier:</label>
-                        <input type="text" name="data.psykana.mod.value" value="{{data.psykana.mod.value}}">
+                        <input type="text" class="combat-resources" data-target="data.psykana.mod.value" value="{{data.psykana.mod.value}}" data-dtype="Number"/>
+                       
                     </div>
                 </div>
                 {{#if (greaterThan data.psykana.pr.value 0)}}
