--- a/templates/actor/dialogs/activeEffects-dialog.html
+++ b/templates/actor/dialogs/activeEffects-dialog.html
@@ -1,4 +1,4 @@
-<div id="aeMod">
+<div id="aeMod" class="aeMod">
     {{#each actor.effects as |ae key|}}
     <div class="flexrow">
         
@@ -6,6 +6,7 @@
         <a class="ae-delete item-delete" title="Delete" data-actor-id="{{../actor.id}}" data-ae-id="{{this.id}}"></a>
     </div>
     {{/each}}
-    <a class="ae-create button" title="Add Ae" data-actor-id="{{actor.id}}">Add Active Effect</a>
+    
    
 </div>
+<a class="ae-create button" title="Add Ae" data-actor-id="{{actor.id}}">Add Active Effect</a>
