replaced all inputs with custom ones

--- a/templates/actor/actor-main.html
+++ b/templates/actor/actor-main.html
@@ -8,12 +8,12 @@
         <div class="descr grid grid-3col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Name:</span>
-                <input name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
+                 <input type="text" class="combat-resources" data-target="name" value="{{actor.name}}" data-dtype="Number"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Age:</span>
-                <input name="data.age.value" type="text" value="{{data.age.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.age.value" value="{{data.age.value}}" data-dtype="Number"/>
             </div>
 
             <div class="descrRow flexcol">
@@ -33,51 +33,52 @@
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Build:</span>
-                <input name="data.build.value" type="text" value="{{data.build.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.build.value" value="{{data.build.value}}" data-dtype="Number"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Hair:</span>
-                <input name="data.hair.value" type="text" value="{{data.hair.value}}" placeholder="bald"/>
+                <input type="text" class="combat-resources" data-target="data.hair.value" value="{{data.hair.value}}" data-dtype="Number"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Eye:</span>
-                <input name="data.eye.value" type="text" value="{{data.eye.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.eye.value" value="{{data.eye.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Quirks:</span>
-                <input name="data.quirks.value" type="text" value="{{data.quirks.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.quirks.value" value="{{data.quirks.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Superstitions:</span>
-                <input name="data.superstitions.value" type="text" value="{{data.superstitions.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.superstitions.value" value="{{data.superstitions.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
-                <span class="descrSpan">momentos:</span>
-                <input name="data.momentos.value" type="text" value="{{data.momentos.value}}" placeholder="??"/>
+                <span class="descrSpan">Momentos:</span>
+                <input type="text" class="combat-resources" data-target="data.momentos.value" value="{{data.momentos.value}}" data-dtype="Number"/>
             </div>
 
         </div>
         <div class="descr grid grid-3col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Chapter:</span>
-                <input name="data.chapter.value" type="text" value="{{data.chapter.value}}" placeholder="???"/>
+                <input type="text" class="combat-resources" data-target="data.chapter.value" value="{{data.chapter.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Background:</span>
-                <input name="data.background.value" type="text" value="{{data.background.value}}" placeholder="???"/>
+                <input type="text" class="combat-resources" data-target="data.background.value" value="{{data.background.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Role:</span>
-                <input name="data.role.value" type="text" value="{{data.role.value}}" placeholder="???"/>
+                
+                 <input type="text" class="combat-resources" data-target="data.role.value" value="{{data.role.value}}" data-dtype="Number"/>
             </div>
 
         </div>
         <div class="eliteAdvances flexcol">
 
             <span class="descrSpan">Elite Advances:</span>
-            <input name="data.eliteAdvances.value" type="text" value="{{data.eliteAdvances.value}}" placeholder="???"/>
+            <input type="text" class="combat-resources" data-target="data.eliteAdvances.value" value="{{data.eliteAdvances.value}}" data-dtype="Number"/>
 
         </div>
         <div class="resources flexrow">
