--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -8,7 +8,7 @@
             <div class="npcheader">
                 <div class="descrRow flexcol npcdescr">
                     <span class="descrSpan">Name:</span>
-                    <input name="name" type="text" value="{{name}}" placeholder="Name" data-dtype="String"/>
+                    <input type="text" class="combat-resources" data-target="name" value="{{{name}}" data-dtype="Number"/>
                 </div>
                 <div class="descrRow flexcol">
                     <span class="descrSpan">Race:</span>
