--- a/templates/actor/actorDH-main.html
+++ b/templates/actor/actorDH-main.html
@@ -8,17 +8,14 @@
         <div class="descr grid grid-4col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Name:</span>
-                <input name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
+                <input type="text" class="combat-resources" data-target="name" value="{{actor.name}}" data-dtype="Number"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Age:</span>
-                <input name="data.age.value" type="text" value="{{data.age.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.age.value" value="{{data.age.value}}" data-dtype="Number"/>
             </div>
-            <div class="descrRow flexcol">
-                <span class="descrSpan">Sex:</span>
-                <input name="data.sex.value" type="text" value="{{data.sex.value}}" placeholder="M/F"/>
-            </div>
+
             <div class="descrRow flexcol">
                 <span class="descrSpan">Race:</span>
                 <select class="raceSelect" name="data.race.value" data-dtype="String">
@@ -31,190 +28,192 @@
                     {{/each}}
                     {{/select}}
                 </select>
-               
+
             </div>
-        </div>
-        <div class="descr grid grid-3col">
+
             <div class="descrRow flexcol">
                 <span class="descrSpan">Build:</span>
-                <input name="data.build.value" type="text" value="{{data.build.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.build.value" value="{{data.build.value}}" data-dtype="Number"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Hair:</span>
-                <input name="data.hair.value" type="text" value="{{data.hair.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.hair.value" value="{{data.hair.value}}" data-dtype="Number"/>
             </div>
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Eye:</span>
-                <input name="data.eye.value" type="text" value="{{data.eye.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.eye.value" value="{{data.eye.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Quirks:</span>
-                <input name="data.quirks.value" type="text" value="{{data.quirks.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.quirks.value" value="{{data.quirks.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Superstitions:</span>
-                <input name="data.superstitions.value" type="text" value="{{data.superstitions.value}}" placeholder="??"/>
+                <input type="text" class="combat-resources" data-target="data.superstitions.value" value="{{data.superstitions.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
-                <span class="descrSpan">momentos:</span>
-                <input name="data.momentos.value" type="text" value="{{data.momentos.value}}" placeholder="??"/>
+                <span class="descrSpan">Momentos:</span>
+                <input type="text" class="combat-resources" data-target="data.momentos.value" value="{{data.momentos.value}}" data-dtype="Number"/>
             </div>
 
         </div>
         <div class="descr grid grid-3col">
             <div class="descrRow flexcol">
                 <span class="descrSpan">Homeworld:</span>
-                <input name="data.homeWorld.value" type="text" value="{{data.homeWorld.value}}" placeholder="???"/>
+                <input type="text" class="combat-resources" data-target="data.homeWorld.value" value="{{data.homeWorld.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Background:</span>
-                <input name="data.background.value" type="text" value="{{data.background.value}}" placeholder="???"/>
+                <input type="text" class="combat-resources" data-target="data.background.value" value="{{data.background.value}}" data-dtype="Number"/>
             </div>
             <div class="descrRow flexcol">
                 <span class="descrSpan">Role:</span>
-                <input name="data.role.value" type="text" value="{{data.role.value}}" placeholder="???"/>
+                <input type="text" class="combat-resources" data-target="data.role.value" value="{{data.role.value}}" data-dtype="Number"/>
             </div>
 
         </div>
         <div class="eliteAdvances flexcol">
             <div><span class="descrSpan">Elite Advances:</span>
-            <input name="data.eliteAdvances.value" type="text" value="{{data.eliteAdvances.value}}" placeholder="???"/></div>
-            <div><span class="descrSpan">Divination:</span>
-            <input name="data.divination.value" type="text" value="{{data.divination.value}}" placeholder="???"/></div>
-            
+                <input type="text" class="combat-resources" data-target="data.eliteAdvances.value" value="{{data.eliteAdvances.value}}" data-dtype="Number"/>
+                <div>
+                    <span class="descrSpan">Divination:</span>
+                    <input type="text" class="combat-resources" data-target="data.divination.value" value="{{data.divination.value}}" data-dtype="Number"/>
 
-        </div>
-        <div class="resources flexrow">
+                </div>
 
-            <div class="flex-group-center">
-                <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
-                <div class="resource-content flexrow flex-center flex-between">
-                    <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
-                    <span> / </span>
-                    <input type="text" class="combat-resources" data-target="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
+
+            </div>
+            <div class="resources flexrow">
+
+                <div class="flex-group-center">
+                    <label for="data.secChar.wounds.value" class="resource-label">Wounds</label>
+                    <div class="resource-content flexrow flex-center flex-between">
+                        <input type="text" class="combat-resources" data-target="data.secChar.wounds.value" value="{{data.secChar.wounds.value}}" data-dtype="Number"/>
+                        <span> / </span>
+                        <input type="text" class="combat-resources" data-target="data.secChar.wounds.max" value="{{data.secChar.wounds.max}}" data-dtype="Number"/>
+                    </div>
+                </div>
+                <div class="flex-group-center">
+                    <label for="data.secChar.fatigue.value" class="resource-label">Fatigue</label>
+                    <div class="resource-content flexrow flex-center flex-between">
+                        <input type="text" class="combat-resources" data-target="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
+                        <span> / </span>
+                        <span type="text">{{data.secChar.fatigue.max}}</span>
+                    </div>
+                </div>
+                <div class="flex-group-center">
+                    <label for="data.fatigue.value" class="resource-label">Influence</label>
+                    <div class="resource-content flexrow flex-center flex-between">
+                        <input type="text" name="data.characteristics.inf.value" value="{{data.characteristics.inf.value}}" data-dtype="Number"/>
+                        <span> -> </span>
+                        <span class="char-total rollable button" data-roll-type="char" data-target="{{data.characteristics.inf.total}}" data-label="{{data.characteristics.inf.label}}" data-char="inf">{{data.characteristics.inf.total}}</span>
+                    </div>
+                </div>
+                <div class="flex-group-center">
+                    <label for="data.fatigue.value" class="resource-label">Global Modifier</label>
+                    <div class="resource-content flexrow flex-center flex-between">
+                        <input type="text" class="combat-resources" data-target="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
+                    </div>
+                </div>
+                <div class="flex-group-center">
+                    <label for="data.fatigue.value" class="resource-label">Fate</label>
+                    <div class="resource-content flexrow flex-center flex-between">
+                        <input type="text" class="combat-resources" data-target="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
+                        <span> / </span>
+                        <input type="text" class="combat-resources" data-target="data.secChar.fate.max" value="{{data.secChar.fate.max}}" data-dtype="Number"/>
+                    </div>
                 </div>
             </div>
-            <div class="flex-group-center">
-                <label for="data.secChar.fatigue.value" class="resource-label">Fatigue</label>
-                <div class="resource-content flexrow flex-center flex-between">
-                    <input type="text" class="combat-resources" data-target="data.secChar.fatigue.value" value="{{data.secChar.fatigue.value}}" data-dtype="Number"/>
-                    <span> / </span>
-                    <span type="text">{{data.secChar.fatigue.max}}</span>
+
+            <div class="characteristics grid grid-10col">
+
+
+
+
+
+                <span class="characteristicsSpan"></span>
+
+
+                {{#each data.characteristics as |char key|}}
+                {{#unless (compareString key "inf")}}
+                <div class="charCross flexcol flex-group-center">
+                    <label for="data.characteristics.{{key}}.value" class="resource-label">{{key}}</label>
                 </div>
-            </div>
-            <div class="flex-group-center">
-                <label for="data.fatigue.value" class="resource-label">Influence</label>
-                <div class="resource-content flexrow flex-center flex-between">
-                    <input type="text" name="data.characteristics.inf.value" value="{{data.characteristics.inf.value}}" data-dtype="Number"/>
-                    <span> -> </span>
-                    <span class="char-total rollable button" data-roll-type="char" data-target="{{data.characteristics.inf.total}}" data-label="{{data.characteristics.inf.label}}" data-char="inf">{{data.characteristics.inf.total}}</span>
+                {{/unless}}
+                {{/each}}
+
+
+                <div class="charCross flexcol flex-group-center">
+                    <span class="characteristicsSpan">Base
+                    </span>
                 </div>
-            </div>
-            <div class="flex-group-center">
-                <label for="data.fatigue.value" class="resource-label">Global Modifier</label>
-                <div class="resource-content flexrow flex-center flex-between">
-                    <input type="text" class="combat-resources" data-target="data.globalMOD.value" value="{{data.globalMOD.value}}" data-dtype="Number"/>
+                {{#each data.characteristics as |char key|}}
+                {{#unless (compareString key "inf")}}
+                <div>
+                    <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.value" value="{{char.value}}" data-dtype="Number"/>
+
+
                 </div>
-            </div>
-            <div class="flex-group-center">
-                <label for="data.fatigue.value" class="resource-label">Fate</label>
-                <div class="resource-content flexrow flex-center flex-between">
-                    <input type="text" class="combat-resources" data-target="data.secChar.fate.value" value="{{data.secChar.fate.value}}" data-dtype="Number"/>
-                    <span> / </span>
-                    <input type="text" class="combat-resources" data-target="data.secChar.fate.max" value="{{data.secChar.fate.max}}" data-dtype="Number"/>
+                {{/unless}}
+                {{/each}}
+
+                <div class="charCross flexcol flex-group-center">
+                    <span class="characteristicsSpan">Unnat</span>
                 </div>
+                {{#each data.characteristics as |char key|}}
+                {{#unless (compareString key "inf")}}
+                <div>
+
+                    <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.uB" value="{{char.uB}}" data-dtype="Number"/>
+                </div>
+                {{/unless}}
+                {{/each}}
+                <div class="charCross flexcol flex-group-center">  
+                    <span class="characteristicsSpan">Adv</span>
+                </div>
+                {{#each data.characteristics as |char key|}}
+                {{#unless (compareString key "inf")}}
+
+                <select class="charSelect" name="data.characteristics.{{key}}.advance" data-dtype="Number">
+                    {{#select char.advance}}
+                    <option value="0">0%</option>
+                    <option value="5">5%</option>
+                    <option value="10">10%</option>
+                    <option value="15">15%</option>
+                    <option value="20">20%</option>
+                    <option value="25">25%</option>
+                    {{/select}}
+                </select>
+                {{/unless}}
+                {{/each}}
+
+
+                <div class="charCross flexcol flex-group-center"> 
+                    <span class="characteristicsSpan">Temp</span>
+                </div>
+                {{#each data.characteristics as |char key|}}
+                {{#unless (compareString key "inf")}}
+                <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.mod" value="{{char.mod}}" data-dtype="Number"/>
+
+                {{/unless}}
+                {{/each}}
+
+
+                <div class="charCross flexcol flex-group-center">
+                    <span class="characteristicsSpan">Total</span>
+                </div>
+                {{#each data.characteristics as |char key|}}
+                {{#unless (compareString key "inf")}}
+                <div class="charCross flexcol flex-group-center">
+                    <span class="char-total rollable button" data-roll-type="char" data-target="{{char.total}}" data-label="{{char.label}}" data-char="{{key}}" title="Bonus: {{char.bonus}}">{{char.total}}</span>
+                </div>
+                {{/unless}}
+                {{/each}}
+
+
+
             </div>
-        </div>
-
-        <div class="characteristics grid grid-10col">
-
-
-
-
-           
-            <span class="characteristicsSpan"></span>
-          
-
-            {{#each data.characteristics as |char key|}}
-            {{#unless (compareString key "inf")}}
-            <div class="charCross flexcol flex-group-center">
-                <label for="data.characteristics.{{key}}.value" class="resource-label">{{key}}</label>
-            </div>
-            {{/unless}}
-            {{/each}}
-
-
-            <div class="charCross flexcol flex-group-center">
-                <span class="characteristicsSpan">Base
-                </span>
-            </div>
-            {{#each data.characteristics as |char key|}}
-            {{#unless (compareString key "inf")}}
-            <div>
-                <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.value" value="{{char.value}}" data-dtype="Number"/>
-               
-
-            </div>
-            {{/unless}}
-            {{/each}}
-
-            <div class="charCross flexcol flex-group-center">
-                <span class="characteristicsSpan">Unnat</span>
-            </div>
-            {{#each data.characteristics as |char key|}}
-            {{#unless (compareString key "inf")}}
-            <div>
-
-                <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.uB" value="{{char.uB}}" data-dtype="Number"/>
-            </div>
-            {{/unless}}
-            {{/each}}
-            <div class="charCross flexcol flex-group-center">  
-                <span class="characteristicsSpan">Adv</span>
-            </div>
-            {{#each data.characteristics as |char key|}}
-            {{#unless (compareString key "inf")}}
-
-            <select class="charSelect" name="data.characteristics.{{key}}.advance" data-dtype="Number">
-                {{#select char.advance}}
-                <option value="0">0%</option>
-                <option value="5">5%</option>
-                <option value="10">10%</option>
-                <option value="15">15%</option>
-                <option value="20">20%</option>
-                <option value="25">25%</option>
-                {{/select}}
-            </select>
-            {{/unless}}
-            {{/each}}
-
-
-            <div class="charCross flexcol flex-group-center"> 
-                <span class="characteristicsSpan">Temp</span>
-            </div>
-            {{#each data.characteristics as |char key|}}
-            {{#unless (compareString key "inf")}}
-            <input type="text" class="combat-resources" data-target="data.characteristics.{{key}}.mod" value="{{char.mod}}" data-dtype="Number"/>
-            
-            {{/unless}}
-            {{/each}}
-
-
-            <div class="charCross flexcol flex-group-center">
-                <span class="characteristicsSpan">Total</span>
-            </div>
-            {{#each data.characteristics as |char key|}}
-            {{#unless (compareString key "inf")}}
-            <div class="charCross flexcol flex-group-center">
-                <span class="char-total rollable button" data-roll-type="char" data-target="{{char.total}}" data-label="{{char.label}}" data-char="{{key}}" title="Bonus: {{char.bonus}}">{{char.total}}</span>
-            </div>
-            {{/unless}}
-            {{/each}}
-
-
-
         </div>
     </div>
-</div>
