--- a/templates/actor/spaceship-sheet.html
+++ b/templates/actor/spaceship-sheet.html
@@ -28,8 +28,8 @@
                         </div>
                         <div class="descrRow flexcol">
                             <div><span class="descrSpan">Complications/Past History:</span>
-                                <input type="text" class="combat-resources" data-target="data.complications.0" value="{{data.complications.0}}" data-dtype="Number"/>
-                                <input type="text" class="combat-resources" data-target="data.complications.1" value="{{data.complications.1}}" data-dtype="Number"/>
+                                <input type="text" class="combat-resources" data-target="data.complications.0" value="{{data.complications.[0]}}" data-dtype="Number"/>
+                                <input type="text" class="combat-resources" data-target="data.complications.1" value="{{data.complications.[1]}}" data-dtype="Number"/>
                             </div>
                             
                             
